--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <input type="text" id="times">
         <button type="submit" id="rollButton">Roll</button>
     </form>
+    <div id="container"></div>
 </body>
 </html>
